Ensure content is wrapped in main element
This is for font size and accessibility

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -269,7 +269,7 @@ dl dd {
 
 .data {
   .registers-index & {
-    margin: -20px 0 40px 0;
+    margin: 40px 0;
   }
 
   .home-page & {
